# griddy

./: Cargo.toml  Makefile  rustfmt.toml
src/: main.rs
testfiles/: pbqff.toml
