[package]
name = "griddy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.10"

pbqff = { version = "0.1.0", path = "../rust-pbqff" }
psqs = { version = "0.1.0", path = "../psqs" }
symm = { version = "0.1.0", path = "../symm" }

[patch."https://github.com/ntBre/psqs"]
psqs = { version = "0.1.0", path = "../psqs" }

[patch."https://github.com/ntBre/spectro"]
spectro = { version = "0.1.0", path = "../spectro/spectro" }

[patch."https://github.com/ntBre/symm"]
symm = { version = "0.1.0", path = "../symm" }